<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_map_creator</name>
  <version>3.5.3</version>
  <description>Plugin to provide map creation support for Gazebo Harmonic</description>

  <maintainer email="arshad.mehmood@intel.com">Arshad Mehmood</maintainer>
  <license>Apache 2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 核心依赖 -->
  <depend>gz-sim9</depend>
  <depend>gz-common6</depend>
  <depend>gz-msgs10</depend>
  <depend>gz-physics8</depend>
  <depend>ros_gz</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>gazebo_map_creator_interface</depend>
  
  <!-- ROS 2 基础依赖 -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>